# singularity-shell

./: README.md  meson.build
protocols/: singularity-tiling-unstable-v1.xml
src/components/app_switcher/: app_switcher.vala
src/components/background/: background.vala
src/components/desktop/: desktop_icons.vala
src/components/dock/: dock.vala
src/components/emoji_picker/: emoji_picker.vala
src/components/notifications/: notification_display.vala
src/components/overview/: app_folder_overlay.vala  app_launcher_grid.vala  app_menu.vala  app_menu_list.vala  overview.vala  search_result_row.vala  workspace_overview.vala
src/components/panel/: panel.vala
src/components/sidebar/pages/: add_input_source_page.vala  autostart_page.vala  bluetooth_page.vala  datetime_page.vala  desktop_page.vala  keyboard_page.vala  network_page.vala  system_page.vala  users_page.vala
src/components/sidebar/views/: settings_view.vala  system_view.vala
src/components/sidebar/widgets/: developer_page.vala
src/core/: app_system.vala  atspi_menu_provider.vala  hot_corner_manager.vala  main.vala  nm_wrapper.vala  notification_manager.vala  plugin_manager.vala  preview_cache.vala  screenshot_portal.vala  screenshot_tool.vala  shortcut_manager.vala  system_monitor.vala  tiling_manager.vala  wallpaper_manager.vala  wayland_gamma_backend.vala
src/core/devtools/: dev_panel.vala  devtools_inspector.vala  devtools_overlay.vala
src/lockscreen/: lock_main.c  lock_media.c  lock_media.h  meson.build
src/shared/widgets/: password_dialog.vala
src/tools/screenshot/: main.c
src/wayland/: vkbd.c  vkbd.h  wayland_integration.c  wayland_integration.h  wayland_integration.vapi  xwl_icon.c  xwl_icon.h
